# mirofish-arabic

./: ARABIC_LOCALIZATION_AUDIT.json  ARABIC_PROGRESS_REPORT_FINAL.md  ARABIC_PROGRESS_REPORT_V10.md  ARABIC_PROGRESS_REPORT_V11.md  ARABIC_PROGRESS_REPORT_V2.md  ARABIC_PROGRESS_REPORT_V3.md  ARABIC_PROGRESS_REPORT_V4.md  Dockerfile  Makefile  README-AR.md  README-EN.md  README-ZH.md  README.md  docker-compose.yml  package.json
.github/workflows/: ci.yml  pages.yml
backend/: pyproject.toml  requirements.txt  run.py
backend/app/: __init__.py  config.py
backend/app/api/: __init__.py  graph.py  report.py  simulation.py
backend/app/models/: __init__.py
backend/app/services/: __init__.py  oasis_profile_generator.py  report_agent.py  report_ui.py  simulation_config_generator.py  simulation_manager.py  zep_tools.py
backend/app/utils/: __init__.py  lazy_import.py  locale.py
backend/tests/: test_app_smoke.py  test_report_ui.py
docs/internal/: ARABIC_LOCALIZATION_AUDIT.json  ARABIC_PROGRESS_REPORT.md  ARABIC_TRANSFORMATION_ROADMAP.md  FINAL_POST_RELEASE_ROADMAP.md  FINAL_RELEASE_NOTES.md
frontend/: index.html  vite.config.js
frontend/src/: App.vue  main.js
frontend/src/api/: index.js  report.js
frontend/src/components/: AppShellHeader.vue  GraphPanel.vue  HistoryDatabase.vue  LanguageSwitcher.vue  Step1GraphBuild.vue  Step2EnvSetup.vue  Step3Simulation.vue  Step4Report.vue  Step5Interaction.vue
frontend/src/i18n/: index.js  localizedText.js  messages.js  runtimeUi.js
frontend/src/utils/: markdown.js
tools/: package_release.py
(+6 files in other folders)
